--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Potrace in Javascript, for NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cd test && node test"
   },
   "repository": {
     "type": "git",
