Refactor library code
- Split types across multiple CommonJS Modules
- Convert main algorithm into OOP class (allowing for proper asynchronous usage on multiple images simultaneously)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "potrace",
   "version": "1.0.0",
   "description": "Potrace in Javascript, for NodeJS",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "cd test && node test"
   },
